fix: fixed broken css vars

--- a/assets/src/css/scss/base/_copy.scss
+++ b/assets/src/css/scss/base/_copy.scss
@@ -1,12 +1,6 @@
 // Typography - Copy
 //--------------------------------------------//
 
-address, blockquote, body, dd, dl, dt, fieldset, figure, html, legend, li, ol, p, pre, ul
-{
-	font-size: 18px;
-	line-height: 28px;
-}
-
 h1, h2, h3, h4, h5, h6, 
 .elementor-widget-heading .elementor-heading-title
 {
