--- a/assets/src/css/scss/base/_forms.scss
+++ b/assets/src/css/scss/base/_forms.scss
@@ -273,7 +273,7 @@
 	@mixin placeholders
 	{
 		opacity: 1;
-		color: var(--site-global-color-form-field-text);
+		color: var(--ast-global-color-2);
 		font-style: italic;
 	}
 
