--- a/assets/src/css/scss/base/_scrollbars.scss
+++ b/assets/src/css/scss/base/_scrollbars.scss
@@ -3,12 +3,12 @@
 
 html
 {
-    scrollbar-color: var(--site-global-color-scrollbars) #e4e4e4;
+    scrollbar-color: var(--ast-global-color-0) #e4e4e4;
 }
 
 body
 {
-    scrollbar-color: var(--site-global-color-scrollbars) #e4e4e4;
+    scrollbar-color: var(--ast-global-color-0) #e4e4e4;
 }
 
 ::-webkit-scrollbar
